--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.2.0",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "daisyui": "^5.0.50",
     "firebase": "^12.0.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
